--- a/benkimim.html
+++ b/benkimim.html
@@ -44,7 +44,7 @@
           <img src="img/me3.jpg" alt="" />
           <div class="left-side-text">
             <h2>ABDULKADİR KIZILARSLAN</h2>
-            <h5>kadirrr0@gmail.com</h5>
+            <h5>example@gmail.com</h5>
 
             <div class="yetenek">
               <h2>YETENEKLER</h2>
